src/objects/BayersSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CY_Orders__c</fullName>
        <label>CY Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_Sales__c</fullName>
        <label>CY Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crop_Type__c</fullName>
        <label>Crop Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monsanto_Area__c</fullName>
        <label>Monsanto Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monsanto_Share__c</fullName>
        <label>Monsanto Share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Sales__c</fullName>
        <label>PY Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity__c</fullName>
        <label>Total Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2PY_Sales__c</fullName>
        <label>2PY Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bayers Settings</label>
</CustomObject>